# Morgane

./: .gitignore  Cargo.toml  DISCLAIMER.md  Makefile  NOTICE  README.md  SECURITY.md
.github/workflows/: release.yml
app/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
app/src/: App.tsx  index.css  main.tsx
app/src/components/: AddCategorySheet.tsx  AddSourceSheet.tsx  ByteBadge.tsx  CategoryDetailPane.tsx  ChangesetPane.tsx  DeleteConfirmDialog.tsx  ImageOverrideEditor.tsx  IntegrityPane.tsx  Logo.tsx  NameDeviceDialog.tsx  OrphanPane.tsx  PlayerBar.tsx  PrepareDetailModal.tsx  Sidebar.tsx  Starfield.tsx  SyncProgressModal.tsx  Thumbnail.tsx
app/src/components/ui/: button.tsx  checkbox.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  progress.tsx  tabs.tsx
app/src/hooks/: useAppBootstrap.ts  useConnectionEffects.ts  useEpisodeRow.ts  useFeedDetail.ts  useImageOverride.ts  useInlineEdit.ts  usePrepareOrchestration.ts  useSearchResults.ts  useSyncFooter.ts  useSyncView.ts
app/src/lib/: changeset.test.ts  changeset.ts  eta.ts  ipc.ts  pickAudio.ts  pickImage.ts  text.ts  types.ts  usePolling.ts  useSyncListeners.ts
app/src/store/: connection.ts  devices.ts  errors.ts  player.ts  podcasts.ts  prepare.ts  setup.ts  sync.ts  tree.ts  ui.ts
app/src/views/: ConnectView.tsx  ErrorsView.tsx  PodcastsView.tsx  SetupView.tsx  SyncView.tsx
crates/merlin-application/: Cargo.toml
crates/merlin-application/src/: lib.rs  sync_episodes_use_case.rs
crates/merlin-application/tests/: sync_episodes_use_case.rs
crates/merlin-application/tests/support/: fake_sync_state_repository.rs
crates/merlin-domain/: Cargo.toml
crates/merlin-domain/src/: lib.rs  library.rs  playlist.rs  podcasts.rs  sync.rs
crates/merlin-domain/src/playlist/: bin_encoder.rs  bin_parser.rs  builder.rs  json_decoder.rs  model.rs  tree_edit.rs
crates/merlin-domain/src/podcasts/: curated.rs  episode.rs  rss_parser.rs  search.rs
crates/merlin-domain/src/sync/: device_file.rs  integrity_checker.rs  merge_planner.rs  orphan_finder.rs  types.rs
crates/merlin-domain/tests/: reference_playlist_bin.rs
crates/merlin-infra/: Cargo.toml
crates/merlin-infra/src/: lib.rs  persistence.rs  podcasts.rs  sync.rs
crates/merlin-infra/src/persistence/: db.rs  device_repository.rs  seen_repository.rs  subscription_repository.rs  sync_state_repository.rs
crates/merlin-infra/src/podcasts/: audio_converter.rs  badge.rs  ffmpeg_provider.rs  image_converter.rs  podcast_search.rs  rss_fetcher.rs
crates/merlin-infra/src/sync/: device_tree_fetcher.rs  engine.rs  error.rs  session.rs
crates/merlin-infra/tests/: device_tree_fetcher.rs  sync_engine.rs
crates/merlin-mock-device/: Cargo.toml
crates/merlin-mock-device/src/: fake_device.rs  lib.rs  store.rs
crates/merlin-mock-device/tests/: validation.rs
crates/merlin-protocol/: Cargo.toml
crates/merlin-protocol/src/: client.rs  commands.rs  crc32_mpeg2.rs  firmware_error_catalog.rs  lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: dto.rs  events.rs  lib.rs  main.rs  state.rs  tree_session.rs
src-tauri/src/commands/: connection.rs  devices.rs  integrity.rs  mod.rs  pending.rs  setup.rs  subscriptions.rs  sync.rs  sync_state.rs  tree.rs
src-tauri/tests/: wire_format.rs
