[workspace]
resolver = "3"
members = [
    "crates/merlin-protocol",
    "crates/merlin-domain",
    "crates/merlin-infra",
    "crates/merlin-application",
    "crates/merlin-mock-device",
    "src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[profile.release]
lto = "thin"
