[package]
name = "merlin-domain"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono = { version = "0.4.45", features = ["serde"] }
quick-xml = { version = "0.41.0", features = ["encoding"] }
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha1 = "0.11.0"
thiserror = "2.0.18"
uuid = { version = "1.23.4", features = ["v4", "v5"] }
