[package]
name = "merlin-mock-device"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
merlin-protocol = { path = "../merlin-protocol" }
merlin-domain = { path = "../merlin-domain" }
tokio = { version = "1.52.3", features = ["net", "time", "io-util", "rt", "sync", "macros", "signal"] }
rusqlite = { version = "0.39", features = ["bundled"] }
sha2 = "0.11.0"
tracing = "0.1.44"
dirs = "6.0.0"
thiserror = "2.0.18"

[[bin]]
name = "merlinsync-mock-device"
path = "src/bin/merlinsync-mock-device.rs"

[dev-dependencies]
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
