[package]
name = "merlin-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
crc = "3.4.0"
sha2 = "0.11.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["net", "time", "io-util", "rt", "sync", "macros"] }
tracing = "0.1.44"

[[bin]]
name = "merlinsync-cli"
path = "src/bin/merlinsync-cli.rs"

[dev-dependencies]
tokio = { version = "1.52.3", features = ["rt-multi-thread", "net", "time", "io-util", "macros"] }
